--- a/your-code/continued_weather_flow.ipynb
+++ b/your-code/continued_weather_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +188,7 @@
     "    \"items_collected\": [],\n",
     "    \"target_room\": outside,\n",
     "    \"current_weather\": [],\n",
+    "    \"able_to_collect\": 0\n",
     "}\n",
     "\n",
     "\n",
@@ -248,12 +249,12 @@
     "        linebreak()\n",
     "        \n",
     "        print(\"You are now in \" + room[\"name\"].upper() + \".\")\n",
-    "        intended_action = input(\"What would you like to do? Type 'explore', 'examine' or 'my items'? \").strip()\n",
+    "        intended_action = input(\"What would you like to do? Type 'explore', 'examine' or 'my items'? \").strip().lower()\n",
     "        if intended_action == \"explore\":\n",
     "            explore_room(room)\n",
     "            play_room(room)\n",
     "        elif intended_action == \"examine\":\n",
-    "            examine_item(input(\"What would you like to examine? \").strip())\n",
+    "            examine_item(input(\"What would you like to examine? \").strip().lower())\n",
     "        elif intended_action == \"my items\":\n",
     "            print(\"You have:\",\", \".join([item[\"name\"].upper() for item in game_state[\"items_collected\"]]))\n",
     "            print(\", \".join([item[\"name\"].upper() for item in game_state[\"keys_collected\"]]))\n",
@@ -359,7 +360,7 @@
     "                else:\n",
     "                    output += \"It is locked but you don't have the key.\"\n",
     "            else:\n",
-    "                if(item[\"name\"] in object_relations and len(object_relations[item[\"name\"]])>0):\n",
+    "                if(game_state[\"able_to_collect\"] and item[\"name\"] in object_relations and len(object_relations[item[\"name\"]])>0):\n",
     "                    item_found = object_relations[item[\"name\"]].pop()\n",
     "                    if item_found[\"type\"] == \"key\":\n",
     "                        game_state[\"keys_collected\"].append(item_found)\n",
@@ -376,13 +377,14 @@
     "    \n",
     "    if(next_room and input(\"Do you want to go to the next room? Enter 'yes' or 'no' \").strip() == 'yes'):\n",
     "        if(next_room == game_state[\"target_room\"]):\n",
+    "            game_state[\"able_to_collect\"] = 1\n",
     "            _, item_needed = get_item_needed()\n",
     "            have_gear = False\n",
     "            if item_needed in [item[\"name\"] for item in game_state[\"items_collected\"]]:\n",
     "                print(\"Luckily you have your gear and you are ready for the weather!\")\n",
     "                play_room(next_room)\n",
     "            else:\n",
-    "                print(\"It's\",game_state[\"current_weather\"][0].upper() + \"!\",\"You can't leave! You need proper gear!\")\n",
+    "                print(\"It's\",game_state[\"current_weather\"][0].upper() + \"!\",\"You can't leave! You should go back to look for proper gear!\")\n",
     "                play_room(current_room)\n",
     "\n",
     "            \n",
@@ -394,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -402,6 +404,49 @@
      "output_type": "stream",
      "text": [
       "You wake up on a couch and find yourself in a strange house with no windows which you have never been to before. You don't remember why you are here and what had happened before. You feel some unknown danger is approaching and you must get out of the house, NOW!\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in GAME ROOM.\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? explore\n",
+      "\n",
+      "\n",
+      "\n",
+      "+------+-------------+----D---+\n",
+      "|      |             |        |\n",
+      "|      |  BEDROOM 2  |        |\n",
+      "| GAME |             | LIVING |\n",
+      "| ROOM |------B------+  ROOM  |\n",
+      "|  *   |             |        |\n",
+      "|      A  BEDROOM 1  C        |\n",
+      "|      |             |        |\n",
+      "+------+-------------+--------+\n",
+      "You explore the room. This is game room. You find COUCH, PIANO, DOOR A\n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in GAME ROOM.\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? exaimne\n",
+      "Not sure what you mean. Type 'explore' or 'examine'. \n",
+      "\n",
+      "\n",
+      "\n",
+      "You are now in GAME ROOM.\n",
+      "What would you like to do? Type 'explore', 'examine' or 'my items'? examine\n",
+      "What would you like to examine? couch\n",
+      "\n",
+      "\n",
+      "\n",
+      "+------+-------------+----D---+\n",
+      "|      |             |        |\n",
+      "|      |  BEDROOM 2  |        |\n",
+      "| GAME |             | LIVING |\n",
+      "| ROOM |------B------+  ROOM  |\n",
+      "|  *   |             |        |\n",
+      "|      A  BEDROOM 1  C        |\n",
+      "|      |             |        |\n",
+      "+------+-------------+--------+\n",
+      "You examine COUCH. There isn't anything interesting about it.\n",
       "\n",
       "\n",
       "\n",
@@ -427,47 +472,12 @@
       "+------+-------------+--------+\n",
       "You examine DOOR D. You unlock it with a key you have.\n",
       "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
-      "Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? 5\n",
-      "It's RAINY! You can't leave! You need proper gear!\n",
+      "Congrats! You're about to go outside, but you need to check the weather first. What is the temperature in celsius today? 34\n",
+      "It's SUNNY! You can't leave! You need proper gear!\n",
       "\n",
       "\n",
       "\n",
-      "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? skip\n",
-      "\n",
-      "\n",
-      "\n",
-      "You are now in LIVING ROOM.\n",
-      "What would you like to do? Type 'explore', 'examine' or 'my items'? examine\n",
-      "What would you like to examine? door d\n",
-      "\n",
-      "\n",
-      "\n",
-      "+------+-------------+----D---+\n",
-      "|      |             |        |\n",
-      "|      |  BEDROOM 2  |        |\n",
-      "| GAME |             | LIVING |\n",
-      "| ROOM |------B------+  ROOM  |\n",
-      "|      |             |    *   |\n",
-      "|      A  BEDROOM 1  C        |\n",
-      "|      |             |        |\n",
-      "+------+-------------+--------+\n",
-      "You examine DOOR D. You unlock it with a key you have.\n",
-      "Do you want to go to the next room? Enter 'yes' or 'no' yes\n",
-      "Luckily you have your gear and you are ready for the weather!\n",
-      "Congrats! You escaped the room!\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "You are now in LIVING ROOM.\n"
      ]
     }
    ],
